--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -10,7 +10,7 @@
   margin-bottom: 15px !important;
   text-transform: capitalize !important;
   color: grey;
-  padding: 15px !important;
+  padding: 0 10px !important;
   border-radius: 30px !important;
   box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.75);
   font-weight: bold !important;
@@ -19,4 +19,9 @@
 .sidebar__footer {
   display: flex;
   justify-content: center;
+}
+
+.sidebar__compose__icon {
+  margin-bottom: 20px !important;
+  height: 17px !important;
 }
