--- a/src/components/Mail/EmailList/EmailRow.css
+++ b/src/components/Mail/EmailList/EmailRow.css
@@ -5,12 +5,16 @@
   border-bottom: 1px solid whitesmoke;
   cursor: pointer;
   z-index: 999;
-  padding-top: 10px;
+  margin-top: 2px;
 }
 
 .emailrow:hover {
   border-top: 1px solid whitesmoke;
   box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.24);
+}
+
+.unread {
+  color: red !important;
 }
 
 .emailrow__options {
